# nn-from-scratch

./: CMakeLists.txt  README.md  main.cpp
src/: ActivationFunction.h  DataReader.cpp  DataReader.h  DenseLayer.cpp  DenseLayer.h  LinearActivation.cpp  LinearActivation.h  Model.cpp  Model.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h
src/data/: mnist.csv
